# test-harness-v02

./: .dockerignore  .gitignore  .gitmodules  README.md  Taskfile.yml  constitution.md  justfile  lifecycle.sh  plan.md  todo.txt
.claude/: settings.json
common/: README.md
common/entities/: parse-error-schema.json  price-schema.json  product-card-schema.json  search-results-schema.json  task-schema.json  unit-price-schema.json
common/fixtures/html-parser/: README.md
common/functions/new-world-product-search/: parse-search-results.schema.json  parse-search-results.test.json
common/functions/task-collections/: count-tasks.schema.json
common/schemas/: test-suite.schema.json
common/wit/: html-parser.wit
container/: .dockerignore  CONTAINER.md  Containerfile  README.md  bootstrap-container-tools.sh  container-build.sh  container-healthcheck.sh  container-pull.sh  container-run.sh  container-shell.sh  container-suite.sh
container/aarch64-darwin-apple-container-codex-universal/: Containerfile  README.md  container-build.sh  container-healthcheck.sh  container-prune-all.sh  container-run.sh  container-shell.sh  container-suite.sh  flake.nix
container/aarch64-darwin-apple-container-nixos-25.11/: Containerfile  README.md  container-build.sh  container-healthcheck.sh  container-pull.sh  container-run.sh  container-shell.sh  container-suite.sh  flake.nix
docs/: baseline-phase0.md  html-parser-plan.md  nix.md  refactoring-plan.md  worktrees.md
docs/adr/: 0001-shared-wit-component-authority.md  0002-native-vs-component-boundaries.md  0003-file-fixture-transport.md  0004-task-just-parity-strategy.md  0005-separate-container-implementations.md  0006-conformance-transports-for-non-wasm-implementations.md
docs/archive/: plan-shopping-optimiser-transposition.md  todo-nixos-25.11-container-base.txt
javascript/: Taskfile.yml  justfile  lifecycle.sh
javascript/component/: Taskfile.yml  eslint.config.js  justfile  lifecycle.sh  package-lock.json  package.json
javascript/component/src/: new-world-parser.js
javascript/component/tests/: app.test.js  fixture-adapter.js  fixture-adapter.test.js  new-world-parser.test.js  parser-binding.test.js  wasm-count-tasks.test.js
javascript/test-support/: eslint.config.js  task-contract.js
python/: .gitignore  Taskfile.yml  flake.nix  justfile  lifecycle.sh
python/component/: Taskfile.yml  justfile  lifecycle.sh  pyproject.toml
python/component/src/: app.py  new_world_parser.py  parser_app.py
python/component/tests/: conftest.py  fixture_adapter.py  test_app.py  test_fixture_adapter.py  test_new_world_parser.py  test_parser_app.py  test_wasm_count_tasks.py
rust/: .gitignore  Taskfile.yml  flake.nix  lifecycle.sh
rust/component/: Cargo.toml  Taskfile.yml  justfile  lifecycle.sh
rust/component/new-world-parser/: Cargo.toml
rust/component/new-world-parser/src/: lib.rs
rust/component/new-world-parser/tests/: parse_search_results.rs
test-harness/: .gitignore  Taskfile.yml  check-contracts.py  check-runner-parity.py  flake.nix  justfile  lifecycle.sh  pyproject.toml  run-wasm-tests.py
test-harness/src/harness/: __init__.py  cli.py  contracts.py  conversion.py  fixtures.py  implementations.py  invocation.py  models.py  runner_parity.py  wit.py
test-harness/tests/: conftest.py  fixture_conformance.py  test_cli.py  test_container_policy_sync.py  test_contracts.py  test_conversion.py  test_dx_worktree.py  test_fixtures.py  test_implementations.py  test_invocation.py  test_models.py  test_real_component_contracts.py  test_runner_behavioral_parity.py  test_runner_parity.py  test_wit.py
