[project]
name = "harness"
version = "0.1.0"
description = "Unified WASM contract test harness and runner-parity checker"
requires-python = ">=3.13"
dependencies = [
    "wasmtime==43.0.0",
    "pyyaml",
    "jsonschema>=4.18,<5",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov>=7.1.0",
]

# ruff itself is provided by the Nix dev shell (test-harness/flake.nix), not
# as a uv-managed dependency here - see that file for why (prebuilt native
# wheel vs. this repo's FHS-less NixOS guest). This section only configures
# ruff's behavior for this project.
[tool.ruff]
# check-runner-parity.py / check-contracts.py / run-wasm-tests.py are POSIX
# `sh` shims kept at a `.py` path for CLI stability; they are not
# Python source and must not be parsed as such.
extend-exclude = [
    "check-contracts.py",
    "check-runner-parity.py",
    "run-wasm-tests.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.coverage.run]
source = ["harness"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
# `harness.models.TestCase` is a domain dataclass, not a pytest test class;
# none of our test modules define classes, so disable class-based collection
# entirely to silence the pytest naming-collision warning it would otherwise
# trigger.
python_classes = "NoPytestTestClasses"
