[project]
name = "task-component"
version = "0.1.0"
description = "WASM task component"
requires-python = ">=3.10"

[project.optional-dependencies]
build = [
    "componentize-py>=0.22.1",
]
test = [
    "pytest",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.coverage.run]
include = ["src/app.py", "src/new_world_parser.py", "src/parser_app.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
